--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.10.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   },
   "type": "module",
   "devDependencies": {
-    "nodemon": "^3.1.7",
+    "nodemon": "^3.1.9",
     "prisma": "^5.20.0"
   }
 }
